--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,16 @@
 <footer class="w-full mt-auto">
 	<div
-		class="flex justify-center w-full mt-10 text-white shadow-xl  bg-gradient-to-b from-gray-800 to-gray-900"
+		class="
+			flex
+			justify-center
+			w-full
+			mt-10
+			text-white
+			shadow-xl
+			bg-gradient-to-b
+			from-gray-800
+			to-gray-900
+		"
 	>
 		<ul class="p-4 list-none">
 			<li>
