--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,6 @@ layout: code_fix
 	<body>
 		{% include nav.html %}
 		<div class="flex flex-col justify-center min-h-full p-0 sm:p-4 xs:p-4">{{ content }}</div>
-		{%- include footer.html -%} {%- include scripts.html -%}
+		{%- include footer.html -%} {%- include page-scripts.html -%}
 	</body>
 </html>
