--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -8,6 +8,7 @@ layout: code_fix
 		{%- include head.html -%}
 	</head>
 	<body>
-		{% include nav.html %} {{content}} {%- include footer.html -%} {%- include scripts.html -%}
+		{% include nav.html %} {{content}} {%- include footer.html -%}
 	</body>
+	{%- include scripts.html -%}
 </html>
