--- a/src/assets/css/terminal.css
+++ b/src/assets/css/terminal.css
@@ -35,10 +35,10 @@
 .terminal-bar > .min {
 	@apply bg-green-500;
 }
-.terminal code:before {
+/* .terminal code:before {
 	content: "> ";
 	@apply m-1 text-green-600;
-}
+} */
 .terminal code,
 .terminal .terminal-content {
 	box-shadow: inset 0 4px 10px -1px rgb(0 0 0 / 0.2), inset 0 2px 4px -3px rgb(0 0 0 / 0.6);
